crates/scheduler/tests/trybuild/fail/nested_option.rs
use scheduler_macros::ScheduledTaskParams;

#[derive(ScheduledTaskParams)]
#[task_params(schema_version = 1)]
struct Params {
    value: Option<Option<String>>,
}

fn main() {}
